ledger (3.0.0~20130309-0mbudde1) quantal; urgency=low

  * Snapshot release.
  * Remove ledger-el package for now.

 -- Michael Budde <mbudde@gmail.com>  Mon, 11 Mar 2013 20:41:43 +0100

ledger (3.0.0~20120510-0mbudde1) precise; urgency=low

  * Snapshot release.

 -- Michael Budde <mbudde@gmail.com>  Wed, 23 May 2012 22:00:59 +0200

ledger (3.0.0~20120426-0mbudde1) precise; urgency=low

  * Snapshot release.

 -- Michael Budde <mbudde@gmail.com>  Tue, 22 May 2012 21:58:34 +0200

ledger (3.0.0~20120217-0mbudde1) precise; urgency=low

  * Snapshot release.

 -- Michael Budde <mbudde@gmail.com>  Sun, 19 Feb 2012 17:48:38 +0100

ledger (3.0.0~20110630-0mbudde1) oneiric; urgency=low

  * Snapshot release.
  * debian/control:
    * Update Standards-Version, no changes required.
    * Fix version of debhelper dependency.
    * Update homepage field.
    * Remove dependency on quilt as is not needed when using
      source format 3.0 (quilt).

 -- Michael Budde <mbudde@gmail.com>  Tue, 22 Nov 2011 21:27:00 +0100

ledger (3.0.0~20110330-0mbudde1) natty; urgency=low

  * Beta release 3.

 -- Michael Budde <mbudde@gmail.com>  Wed, 30 Mar 2011 23:37:13 +0200

ledger (3.0.0~20100623-0mbudde1) lucid; urgency=low

  * Beta release 2.

 -- Michael Budde <mbudde@gmail.com>  Fri, 25 Jun 2010 13:34:56 +0200

ledger (3.0.0~20100615-0mbudde1) lucid; urgency=low

  * Beta release 1.
  * debian/rules:
    * Don't build and install PDF and HTML documentation.
      PDF documentation is installed by make.
    * Don't copy config.{guess,sub} from /usr/share/misc.
  * debian/control:
    * Add missing dependencies.
    * Update maintainer.
  * Add binary package ledger-el
    * Add section in debian/control
    * Fix installation path of ledger.el in debian/rules.
    * Move emacsen-startup to ledger-el.emacsen-startup.
    * Add ledger-el.dirs.
  * Remove debian-supplied manpage; added upstream.
  * Remove debian/dirs.
  * Switch to dpkg-source 3.0 (quilt) format