@@ -1,23 +1,10 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/cmake.mk
 
-%:
-	dh $@
+DEB_CMAKE_EXTRA_FLAGS += -DNO_ASSERTS=1
 
-override_dh_auto_configure:
-	dh_auto_configure -- \
-		--enable-python
-
-override_dh_auto_install:
-	dh_auto_install --destdir=debian/ledger
-
-	rm -rf debian/ledger/usr/include
-	rm -rf debian/ledger/usr/lib
+install/ledger::
+	rm -r debian/ledger/usr/include
+	rm -r debian/ledger/usr/lib
