@@ -2,6 +2,8 @@ ledger (3.0.0~20130309-0mbudde1) quantal; urgency=low
 
   * Snapshot release.
   * Remove ledger-el package for now.
+  * debian/rules:
+    * Change build system to CMake using CDBS.
 
  -- Michael Budde <mbudde@gmail.com>  Mon, 11 Mar 2013 20:41:43 +0100
 
